@@ -379,7 +379,7 @@
       <question>What are the system requirements to run Batik?</question>
       <answer>
         <p>
-          Batik is written in the Java language and requires a version 1.3
+          Batik is written in the Java language and requires a version 1.4
           implementation at this time. 
         </p>
       </answer>
@@ -389,8 +389,8 @@
       <question>How do I install Batik?</question>
       <answer>
         <p>
-          You will need the <a href="http://java.sun.com/">JDK 1.3</a> to run
-          Batik.
+          You will need a <a href="http://java.sun.com/">JRE/JDK</a> version
+          1.4 or above to run Batik.
         </p>
         <p>
           To install Batik you need to <a href="site:download">download</a>
